--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 <body>
 
   <header class="top-bar">
-    <img src="https://i.ibb.co/6Rc0szFB/Logo.png" alt="Logo" class="logo" />
+    <img src="https://i.ibb.co/8nbrc06R/1768350301312.png" alt="Logo" class="logo" />
     <i id="search-icon" class="fas fa-search search-icon"></i>
   </header>
 
